<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="uruchomDwa"
        android:text="@string/b1"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="515dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="uruchomtrzy"
        android:text="@string/b2"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="612dp" />
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="uruchomcztery"
        android:text="@string/b3"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="612dp" />
    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="uruchompiec"
        android:text="@string/b4"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="612dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="uruchomadd"
        android:text="@string/b5"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="612dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>